# watchctl

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: check.rs  cli.rs  config.rs  duration.rs  error.rs  main.rs  process.rs  retry.rs  wait.rs  watch.rs
src/check/: file.rs  http.rs  tcp.rs
