[package]
name = "watchctl"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Ivan Zakharchanka <3axap4eHko@gmail.com>"]
description = "Process supervisor with wait, watch, and retry phases"
repository = "https://github.com/3axap4eHko/watchctl"
homepage = "https://github.com/3axap4eHko/watchctl"
keywords = ["cli", "process", "supervisor", "health-check", "retry"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
